--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.8",
     "mockjs": "^1.1.0",
     "pinia": "^2.2.6",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "sass-embedded": "^1.81.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-mock": "^3.0.2"
   }
 }
